fix(navigation): изменены z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 999;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.65);
 }
 
