--- a/src/app/shared/layout/navigation-menu/navigation-menu.component.scss
+++ b/src/app/shared/layout/navigation-menu/navigation-menu.component.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  z-index: 1000;
+  z-index: 1001;
   transform: translateX(-100%);
   background-color: $light;
   transition: transform 0.2s;
